--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "backend-ecommerce",
   "version": "1.0.0",
   "description": "simple CRUD API with mongo",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "format": "prettier --write \"**/*.js\""
   },
   "keywords": [],
